--- a/style.css
+++ b/style.css
@@ -1,28 +1,43 @@
 div {
-    background-color: aqua;
-padding 30px;
-width:100px;
-height:200px;
-position: absoulte;
-}
-#title {
-    background-color: crimson;
+    background-color: lightskyblue;
+    padding: 30px;
+ 
     width: 100px;
-    height: 300px;
+    height: 100px;
+   
+  
     position: absolute;
+  
 }
-#a1 {
-background-color: lightgreen;
-top:0;
-left: 100%;
-}
-#a2 {
-    background-color: bisque;
+  #a1 {
+      background-color: lightblue;
+      width:100%;
+      height:100%
+  }
+  #a2 {
+      background-color: lightgrey;
+      top: 0;
+      right: 0;
+      width: 100px;
+    height: 100%;
+  }
+  #a3 {
+    background-color: lightseagreen;
     top: 0;
-    right: 100%;
-}
-#a3 {
-    background-color: cornflowerblue;
-    bottom: 100%;
     left: 0;
-}
+    width: 100px;
+  height: 100%;
+  }
+  #a4 {
+    background-color: lightpink;
+    bottom: 0;
+    right: 0;
+    width:100%;
+     
+  }
+  #a5 {
+      background-color: cadetblue;
+      top: 0;
+    left:0;
+      width: 100%;
+  }
