--- a/lab3/style.css
+++ b/lab3/style.css
@@ -24,6 +24,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-top: 40px;
 }
 
 
@@ -45,13 +46,27 @@ body {
 .mail {
     display: flex;
     justify-content: center;
+    padding: 40px;
 }
 .about {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif, Helvetica, sans-serif;
     color: #A9B0B6;
     font-size: 30px;   
     display:flex;
     justify-content: center;
-    padding-bottom: 25px;
-    
+    padding: 25px;   
+}
+.text {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: #A9B0B6; 
+    font-size:15px;
+    line-height: 1.6;
+}
+.copyright {
+    display:flex;
+    justify-content: center;
+    font-family:'Times New Roman', Times, serif;
+    font-size: 10px;
+    color:grey;
+    padding-bottom: 30px;
 }
