--- a/lab6/style.css
+++ b/lab6/style.css
@@ -1,16 +1,29 @@
+
 body {
 margin:0;
 }
 
+
+a, a:hover, a:focus, a:active {
+    text-decoration: none;
+    color: inherit;
+}
 .header-container {
     background-image: url(photos/masthead@2x.jpg);  
     background-position: top center;
     background-size: cover;
+   
 }
  
 .wrapper-clearfix {
     display:grid;
     grid-template-columns: 1fr 1fr;
+    border-bottom: 1px solid #cad2d7;
+    margin-left:300px;
+    padding-top:50px;
+    padding-bottom:30px;
+    margin-right:300px;
+    
 }
 
 .nav {
@@ -20,12 +33,43 @@ margin:0;
 }
 
 .nav a {
+	
 	font-size: 20px;
-
+	padding: 0.3em 1.2em;
+	border-radius: 3px;
+} 
+.active {
+    background-color: #ffc000;
+} 
+.nav a:hover {
+    background-color: #646d72;
 }
+
+
 #masthead{
 	display: block;
 	height: 1050px;
+}
+.cta h1{
+	font-family: 'Roboto';
+	font-size: 96px;
+	margin-bottom: 15px;
+    color:white;
+	
+}
+.cta h3{
+	font-family: 'aleoitalic';
+    color: #e2e2e2;
+}
+
+.cta a {
+    color: #3c4a52;
+}
+.cta{
+	margin-top: 18%;
+	padding-bottom: 30px;
+	font-size: 18px;
+    color: #fff;
 }
 
 .clearfix {
@@ -34,5 +78,33 @@ margin:0;
     gap: 100px;
     margin-left:300px;
     margin-right: 300px;
+    padding-top:30px;
+    padding-bottom:30px;
     
+}
+.main-wrapper-clearfix {
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    border-top: 1px solid #cad2d7;
+    font-size: 5px;
+	color: #9fa6aa;
+	padding: 50px 300px 50px 300px;
+	margin-top: 20px;
+    margin-left:300px;
+    margin-right:300px;
+}
+
+.foot-left{
+	font-size: 14px;
+}
+
+.foot-right {
+    position:relative;
+    left:80%;
+    color: #9fa6aa;
+}
+
+.social {
+    filter: invert(90%);
+    size:50px;
 }
